# codex-bridge

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.agents/: skills
.github/workflows/: ci.yml
crates/codex-bridge-cli/: Cargo.toml
crates/codex-bridge-cli/src/: cli.rs  lib.rs  main.rs  task_exit.rs
crates/codex-bridge-cli/tests/: cli_tests.rs
crates/codex-bridge-core/: Cargo.toml
crates/codex-bridge-core/assets/: bridge_protocol.md  default_system_prompt.md  model_capabilities.toml.example  persona.md
crates/codex-bridge-core/src/: admin_approval.rs  api.rs  approval_guard.rs  codex_runtime.rs  config.rs  conversation_history.rs  events.rs  lane_manager.rs  launcher.rs  lib.rs  message_router.rs  model_capability.rs  napcat.rs  orchestrator.rs  outbound.rs  reply_context.rs  reply_formatter.rs  runtime.rs  runtime_pool.rs  scheduler.rs  service.rs  state_store.rs  system_prompt.rs  workspace_guard.rs
crates/codex-bridge-core/src/model_capabilities/: anthropic_messages.rs  mod.rs
crates/codex-bridge-core/tests/: admin_approval_tests.rs  api_tests.rs  approval_guard_tests.rs  codex_runtime_tests.rs  config_tests.rs  events_tests.rs  launcher_tests.rs  message_router_tests.rs  napcat_transport_tests.rs  orchestrator_tests.rs  reply_context_tests.rs  scheduler_tests.rs  state_store_tests.rs  workspace_guard_tests.rs
docs/superpowers/plans/: 2026-04-05-codex-bridge-prompt-file.md  2026-04-05-codex-bridge-qq-codex-skill.md  2026-04-05-codex-bridge-repository-restructure.md  (+4 more)
qqbot-cli/: Cargo.toml
qqbot-cli/src/: cli.rs  lib.rs  main.rs
qqbot-cli/tests/: cli_tests.rs
qqbot-core/: Cargo.toml
qqbot-core/src/: api.rs  approval_guard.rs  codex_runtime.rs  config.rs  events.rs  launcher.rs  lib.rs  message_router.rs  napcat.rs  runtime.rs  scheduler.rs  service.rs  state_store.rs  system_prompt.rs
qqbot-core/tests/: api_tests.rs  codex_runtime_tests.rs  config_tests.rs  events_tests.rs  launcher_tests.rs  message_router_tests.rs  napcat_transport_tests.rs  orchestrator_tests.rs  scheduler_tests.rs  state_store_tests.rs
scripts/: reload-capabilities.sh
skills/gpt2api-image-generator/: SKILL.md  generate_gpt2api_image.py  test_generate_gpt2api_image.py
skills/invoke-capability/: SKILL.md  invoke_capability.py
skills/qq-current-history/: SKILL.md  query_current_history.py
skills/qq-quoted-image-recovery/: SKILL.md
skills/reply-current/: SKILL.md  reply_current.py
skills/staticflow-kiro-log-diagnoser/: SKILL.md  inspect_kiro_errors.py
(+6 files in other folders)
