[workspace]
resolver = "2"
members = ["qqbot-core", "qqbot-cli"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
empty_docs = "deny"
tabs_in_doc_comments = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
unescaped_backticks = "deny"
